fix title on community settings on mobile

--- a/src/css/mixins/full-screen-modal.less
+++ b/src/css/mixins/full-screen-modal.less
@@ -123,7 +123,7 @@
 
   //padding for mobile
   @media (max-width: @screen-xs-max) {
-    .navbar-brand {
+    .navbar-center {
       padding-left: @std-padding*2;
     }
     .navbar-right {
